# chick

./: README.md  dune-project  typecheck.opam
lib/: chick.ml  context.ml  dune  solver.ml  solver.mli  syntax.ml  typecheck.ml  typecheck.mli
report/: macros.tex  presentation.tex  references.bib  report.tex
test/: dune  test.ml  test_poly.ml  test_typecheck.ml
