(lang dune 3.17)

(name typecheck)

(generate_opam_files true)

(authors "Louis Hildebrand <louis.hildebrand@mail.mcgill.ca>")

(maintainers "Louis Hildebrand <louis.hildebrand@mail.mcgill.ca>")

(license MIT)

(package
 (name typecheck)
 (synopsis "Type checker for simple dependently-typed language")
 (depends ocaml ounit2))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
